--- a/client/src/indexP.css
+++ b/client/src/indexP.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
-body {
+.profile_section {
   width: 100%;
   margin: 0;
   padding: 0;
