--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,3 +21,16 @@ code {
   text-decoration-color: crimson;
 }
 
+button {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.on {
+  color: goldenrod;
+}
+.off {
+  color: #ccc;
+}
+
